--- a/StoreGUI/Readme
+++ b/StoreGUI/Readme
@@ -1,1 +1,3 @@
-
+# StoreGUI
+A login screen is prompting the user to add a username and password is shown with data validation built in. If username and password is collect then another scene is shown.
+This second scene has texboxes for quantity of shirts, pants, ties, shoes, and sales tax. Upon pressing "Calculate" the total bill is calculated and displayed 
